new proj/src/objects/GE_HQ_CUST_CREDIT_HIST__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Acc__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Credit History</relationshipLabel>
        <relationshipName>Customer_Credit_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acct_Cr_Limit__c</fullName>
        <inlineHelpText>The ES credit limit that has been extended to the account. Individual P&amp;Ls may have a different credit limit than what is shown.</inlineHelpText>
        <label>Account Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acct_Pymt_Terms__c</fullName>
        <inlineHelpText>This is the ES standard payment terms that have been approved for the customer.</inlineHelpText>
        <label>Account Payment Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acct_eRAM_score__c</fullName>
        <inlineHelpText>eRam score is an ES consolidated score related to the credit risk factors associated with this customer.</inlineHelpText>
        <label>Account eRAM score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bus_Tier_1__c</fullName>
        <label>Business - Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bus_Tier_2__c</fullName>
        <label>Business - Tier 2</label>
        <picklist>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Info_Available__c</fullName>
        <inlineHelpText>If the field shows No, then credit information is not available for this account.
If the field shows Yes, then credit information is available for this account.</inlineHelpText>
        <label>Credit Information Available</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Limit_Exceeded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is checked when the Credit Limit Remaining is negative.This calculation is updated once a day.</inlineHelpText>
        <label>Credit Limit Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Limit_Remaining__c</fullName>
        <inlineHelpText>Value is negative if credit limit is exceeded, otherwise value is positive.
CL Remaining =Credit Limit-GECARS AR - Total Amount ( All items) . Total Amount includes Opts with 1) stage Active-Commit and 2) R Status either R3 Complete or R3 Queue.</inlineHelpText>
        <label>Credit Limit Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Lt_Exceeded_Dt__c</fullName>
        <label>Credit Limit Exceeded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Score__c</fullName>
        <inlineHelpText>The commercial credit score predicts the likelihood of a firm paying delinquent (90 + days past terms) during the next 12 months, based on D&amp;B information. Commercial credit score is a component of the eRam score.</inlineHelpText>
        <label>Commercial Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Watchlist_Level__c</fullName>
        <inlineHelpText>Purple - customer is in bankruptcy or has defaulted
Red - customer has high risk of bankruptcy or default
Orange - customer has medium risk of bankruptcy or default</inlineHelpText>
        <label>Credit Watchlist Level</label>
        <picklist>
            <picklistValues>
                <fullName>Purple-Credit Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red-High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange-Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cr_Watchlist__c</fullName>
        <inlineHelpText>A watchlist customer has higher than average credit risk based on the EDF score or other criteria.</inlineHelpText>
        <label>Credit Watchlist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DUNS_Number__c</fullName>
        <formula>GE_HQ_Acc__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_D_B_Rtg__c</fullName>
        <inlineHelpText>D&amp;B rating is an external rating based on the size and perceived credit risk of the customer. D&amp;B rating is a component of the eRam score.</inlineHelpText>
        <label>D&amp;B Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Days_to_Pay_Variance__c</fullName>
        <inlineHelpText>This is a formula field that takes the average days to pay and average terms and tells you how many days past terms or before terms customer pays. i.e. – 5 means customer pays 5 days before terms; 5 means 5 days after terms.</inlineHelpText>
        <label>Days to Pay Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_KMV_EDF__c</fullName>
        <inlineHelpText>EDF is a commonly used predictor of expected default of a customer at some point in the future. Score is shown on a scale of 0-35 with 0 = lowest default risk, 35 = highest default risk.</inlineHelpText>
        <label>KMV EDF (Expected Default Frequency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Past_Due_181_365__c</fullName>
        <label>Past Due 181-365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Past_Due_1_30__c</fullName>
        <label>Past Due 1-30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Past_Due_31_60__c</fullName>
        <label>Past Due 31-60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Past_Due_365__c</fullName>
        <label>Past Due 365+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Paydex__c</fullName>
        <inlineHelpText>Paydex is a D&amp;B weighted indicator of payment performance based on past payment experiences. Paydex is a component of the eRam score.</inlineHelpText>
        <label>Paydex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Stress_Score__c</fullName>
        <inlineHelpText>Financial stress score is a predictor of a firm ceasing business without paying all creditors in full, reorganizing or obtaining relief from creditors over the next 12 months. Financial stress score is a component of the eRam score.</inlineHelpText>
        <label>Financial Stress Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tot_AR_s__c</fullName>
        <inlineHelpText>The total ES amount due from this customer in GECARS accounts receivable system.</inlineHelpText>
        <label>Total AR ($s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tot_Past_Due__c</fullName>
        <inlineHelpText>The total amount past due for this customer in the GECARS accounts receivable system.</inlineHelpText>
        <label>Total Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_YTD_Invcg__c</fullName>
        <inlineHelpText>The current YTD ES billed sales for this customer.</inlineHelpText>
        <label>YTD Invoicing (Billed Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Credit History</label>
    <nameField>
        <displayFormat>CCH-{000000}</displayFormat>
        <label>Customer Credit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Credit History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>